# releven-backend

./: .gitignore  Dockerfile  README.md  _config.yml  generate-endpoints.sh  index.md  pathbuilder_20250410_expanded.xml  pathbuilder_expanded_20251216.xml  pathbuilder_wisski.xml  pyproject.toml  releven.py  releven__person_stub.py  releven__person_stub.rq  releven_g_author_group.py  releven_g_author_group.rq  releven_g_bibliography.py  releven_g_bibliography.rq  releven_g_boulloterion.py  releven_g_boulloterion.rq  releven_g_ethnic_group.py  releven_g_ethnic_group.rq  releven_g_external_authority.py  releven_g_external_authority.rq  releven_g_gender.py  releven_g_gender.rq  releven_g_language.py  releven_g_language.rq  releven_g_legal_status.py  releven_g_legal_status.rq  releven_g_passage.py  releven_g_passage.rq  releven_g_person.py  releven_g_person.rq  releven_g_publication.py  releven_g_publication.rq  releven_g_religious_affiliation.py  releven_g_religious_affiliation.rq  releven_g_seal.py  releven_g_seal.rq  releven_g_seal_collection.py  (+24 more)
.github/workflows/: starter.yaml
assets/: main.scss
