[project]
name = "releven-backend"
version = "0.1.0"
description = ""
requires-python = "~=3.12"
authors = [{ name = "Kevin Stadler", email = "kevin.stadler@oeaw.ac.at" }]
dependencies = [
  "fastapi[standard]>=0.115.4,<0.116",
  "gitpython>=3.1.43,<4",
  "rdfproxy>=0.9.0",
  "wisskas>=0.1.0",
]

[tool.uv.sources]
wisskas = { git = "https://github.com/acdh-oeaw/wisskas" }

