[project]
name = "releven-backend"
version = "0.1.0"
description = ""
requires-python = "~=3.12.0"
authors = [{ name = "Kevin Stadler", email = "kevin.stadler@oeaw.ac.at" }]
dependencies = [
  "fastapi[standard]>=0.115.4,<0.116",
  "gitpython>=3.1.43,<4",
  "pytest>=8.4.2",
  "rdfproxy>=0.9.0",
  "wisskas>=0.1.0",
]

[tool.uv.sources]
wisskas = { git = "https://github.com/acdh-oeaw/wisskas" }
rdfproxy = { git = "https://github.com/acdh-oeaw/rdfproxy.git", branch = "kstl/v0.9.0-with-httpx-kwargs" }

